tests/invalid/final_object_inheritance.wio
@Final
object FinalBase {
}

@From(FinalBase)
object DerivedFromFinal {
}

fn Entry(args: string[]) -> i32 {
    return 0;
}
